--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+@font-face {
+	font-family: ubuntumono;
+	src=url (UbuntuMono-Regular.ttf);
+}
 body {
 	background: #1b1b1b ;
 	color: #fff ;
 	padding-left: 20vw ;
 	padding-right: 20vw ;
+	font-family: ubuntumono;
 }
 
 footer {
